--- a/MyApplication1/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication1/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_weight="6"
         android:orientation="horizontal"
-        android:layout_weight="6">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:id="@+id/LeftBar"
@@ -42,12 +46,12 @@
                 android:layout_weight="1"
                 android:background="@color/defaultColor"
                 android:clickable="true"
-                android:text="@string/khop_lop"
                 android:gravity="center|center_horizontal|center_vertical"
+                android:text="@string/khop_lop"
                 android:textAlignment="center"
+                android:textColor="@color/white"
                 android:textSize="20sp"
-                tools:ignore="NestedWeights"
-                android:textColor="@color/white"/>
+                tools:ignore="NestedWeights" />
 
             <TextView
                 android:id="@+id/tbDaoLop"
@@ -56,12 +60,12 @@
                 android:layout_weight="1"
                 android:background="@color/defaultColor"
                 android:clickable="true"
-                android:text="@string/dao_lop"
                 android:gravity="center|center_horizontal|center_vertical"
+                android:text="@string/dao_lop"
                 android:textAlignment="center"
+                android:textColor="@color/white"
                 android:textSize="20sp"
-                tools:ignore="NestedWeights"
-                android:textColor="@color/white"/>
+                tools:ignore="NestedWeights" />
 
             <TextView
                 android:id="@+id/tbCaiDat"
@@ -70,12 +74,12 @@
                 android:layout_weight="1"
                 android:background="@color/defaultColor"
                 android:clickable="true"
-                android:text="@string/cai_dat"
                 android:gravity="center|center_horizontal|center_vertical"
+                android:text="@string/cai_dat"
                 android:textAlignment="center"
+                android:textColor="@color/white"
                 android:textSize="20sp"
-                tools:ignore="NestedWeights"
-                android:textColor="@color/white"/>
+                tools:ignore="NestedWeights" />
 
             <TextView
                 android:id="@+id/tbAmThanh"
@@ -84,12 +88,12 @@
                 android:layout_weight="1"
                 android:background="@color/defaultColor"
                 android:clickable="true"
-                android:text="@string/am_thanh"
                 android:gravity="center|center_horizontal|center_vertical"
+                android:text="@string/am_thanh"
                 android:textAlignment="center"
+                android:textColor="@color/white"
                 android:textSize="20sp"
-                tools:ignore="NestedWeights"
-                android:textColor="@color/white"/>
+                tools:ignore="NestedWeights" />
         </LinearLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
