--- a/MyApplication1/app/src/main/res/layout/tire_monitor.xml
+++ b/MyApplication1/app/src/main/res/layout/tire_monitor.xml
@@ -8,17 +8,18 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="235dp"
-        android:layout_height="match_parent"
+        android:layout_width="175dp"
+        android:layout_height="0dp"
         android:layout_centerInParent="true"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:background="@color/teal_200"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/car" />
+        app:srcCompat="@drawable/car1" />
 
     <LinearLayout
         android:layout_width="100dp"
@@ -34,10 +35,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/purple_200"
+            android:background="@drawable/coner_up"
             android:gravity="center|center_horizontal|center_vertical"
             android:text="0.0  Bar"
-            android:textColor="@color/white"
+            android:textColor="@color/text"
             android:textSize="20dp" />
 
         <TextView
@@ -45,10 +46,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:background="@color/white"
+            android:background="@drawable/coner_bottom"
             android:gravity="center|center_horizontal|center_vertical"
             android:text="- 40 *C"
-            android:textColor="@color/black"
+            android:textColor="@color/text"
             android:textSize="20dp" />
     </LinearLayout>
 
@@ -66,10 +67,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/purple_200"
+            android:background="@drawable/coner_up"
             android:gravity="center|center_horizontal|center_vertical"
             android:text="0.0  Bar"
-            android:textColor="@color/white"
+            android:textColor="@color/text"
             android:textSize="20dp" />
 
         <TextView
@@ -77,10 +78,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:background="@color/white"
+            android:background="@drawable/coner_bottom"
             android:gravity="center|center_horizontal|center_vertical"
             android:text="- 40 *C"
-            android:textColor="@color/black"
+            android:textColor="@color/text"
             android:textSize="20dp" />
     </LinearLayout>
 
@@ -98,10 +99,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/purple_200"
+            android:background="@drawable/coner_up"
             android:gravity="center|center_horizontal|center_vertical"
             android:text="0.0  Bar"
-            android:textColor="@color/white"
+            android:textColor="@color/text"
             android:textSize="20dp" />
 
         <TextView
@@ -109,10 +110,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:background="@color/white"
+            android:background="@drawable/coner_bottom"
             android:gravity="center|center_horizontal|center_vertical"
             android:text="- 40 *C"
-            android:textColor="@color/black"
+            android:textColor="@color/text"
             android:textSize="20dp" />
     </LinearLayout>
 
@@ -130,10 +131,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/purple_200"
+            android:background="@drawable/coner_up"
             android:gravity="center|center_horizontal|center_vertical"
             android:text="0.0  Bar"
-            android:textColor="@color/white"
+            android:textColor="@color/text"
             android:textSize="20dp" />
 
         <TextView
@@ -141,7 +142,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:background="@color/white"
+            android:background="@drawable/coner_bottom"
             android:gravity="center|center_horizontal|center_vertical"
             android:text="- 40 *C"
             android:textColor="@color/black"
