--- a/MyApplication1/app/src/main/res/values/colors.xml
+++ b/MyApplication1/app/src/main/res/values/colors.xml
@@ -5,8 +5,9 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#00010C</color>
+    <color name="black">#000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="defaultColor">#010725</color>
-    <color name="onclick">#132353</color>
+    <color name="defaultColor">#141C22</color>
+    <color name="onclick">#00E0EE</color>
+    <color name="text">#FFFFFFFF</color>
 </resources>
