--- a/MyApplication1/app/src/main/res/layout/tire_monitor.xml
+++ b/MyApplication1/app/src/main/res/layout/tire_monitor.xml
@@ -145,7 +145,7 @@
             android:background="@drawable/coner_bottom"
             android:gravity="center|center_horizontal|center_vertical"
             android:text="- 40 *C"
-            android:textColor="@color/black"
+            android:textColor="@color/text"
             android:textSize="20dp" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
